# GenerativeDataBases

./: .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
generative_databases/: cli.py  data.py
generative_databases/data/Poland_all_first_last_names/: Imiona_nadane_wPolsce_w_latach_2000-2019.csv  README.txt  polish_surnames.txt
generative_databases/data/Poland_car_plate_number/: car_plates.csv
generative_databases/data/Poland_cities/: README.txt  pl.csv  pl.json
generative_databases/data/Poland_postal_codes/: PL_POSTAL_CODE_CS.csv  README.txt
generative_databases/data/Polnad_postal_codes/: pl_state_district_mapping.csv
generative_databases/generators/: data_importer.py  generator.py
