[tool.poetry]
name = "generative-databases"
version = "0.1.0"
description = "Generate real world data for your sql tables"
authors = ["Krystian Ogonowski <krystian@ogonowski.it>"]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
generative-databases = "generative_databases.cli:app"

[tool.poetry.dependencies]
python = "^3.11"
typer = {extras = ["all"], version = "^0.9.0"}


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
