[tool.poetry]
name = "generative-databases"
version = "1.0.0"
description = "Generate real world data for your database tables"
authors = ["Dominik Gil <gildominik@gmail.com>", "Paweł Lachawiec <lokoroko456@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Famidore/GenerativeDataBases"

[tool.poetry.scripts]
generative-databases = "generative_databases.cli:app"

[tool.poetry.dependencies]
python = "^3.11"
typer = {extras = ["all"], version = "^0.9.0"}
numpy = "^1.26.4"
pandas = "^2.2.2"
radar = "^0.3"
Unidecode = "^1.3.8"



[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
